Fri Feb  8 14:37:16 UTC 2013  Byron Harris  <harrisb@ociweb.com>

        * orbsvcs/orbsvcs/Naming/FaultTolerant/nsgroup_svc.cpp:

          Revert a change for wchar support that was causing
          compile failure for narrow char build.

Fri Feb  8 03:47:02 UTC 2013  Kevin Stanley  <stanleyk@ociweb.com>

        * tao/CDR.h:

          Fix Coverity 972947. Non-virtual destructor.

        * orbsvcs/ImplRepo_Service/Locator_XMLHandler.cpp:

          Fix Coverity 972940 Uninitialized scalar field.

        * orbsvcs/orbsvcs/Naming/FaultTolerant/FT_Naming_Manager.cpp:

          Fix Coverity 972941 - Uninitialized scalar field.

        * orbsvcs/orbsvcs/Naming/FaultTolerant/FT_Naming_Server.cpp:

          Fix Coverity 972946 - Double free.

        * utils/nsgroup/nsgroup.cpp:

          Fix Coverity 972945 - Uninitialized pointer field.

Thu Feb  7 23:26:20 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>

        * utils/logWalker/GIOP_Buffer.cpp:
        * utils/logWalker/Invocation.h:
        * utils/logWalker/Invocation.cpp:

          Incremental improvments for buffer parsing and reporting

Thu Feb  7 23:02:53 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>

        * bin/tao_orb_tests.lst:

        * tao/RTCORBA/RT_Invocation_Endpoint_Selectors.cpp:

        * tao/Stub.h:
        * tao/Stub.inl:

        * tests/Bug_4059_Regression:

          Fix for bugzilla 4059.

Thu Feb  7 22:55:30 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>

        * MPC/config/dynamic_tp.mpb:
        * tests/Dynamic_TP/POA_Loader/Dynamic_TP_POA_Test_Static/server.cpp:

          Fix scoreboard issues with corba_e_micro avoidance and a compile warning.

Thu Feb  7 22:45:43 UTC 2013  Phillip LaBanca  <labancap@ociweb.com>

        * orbsvcs/tests/FT_Naming/Load_Balancing/Basic.cpp:
        * orbsvcs/tests/FT_Naming/Load_Balancing/client.cpp:

          Scoreboard cleanup for wchar compatibility.

Thu Feb  7 22:28:22 UTC 2013  Phillip LaBanca  <labancap@ociweb.com>
